--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "json": "json-server --watch db.json --port 3001 --delay 1000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
