--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-router": "^6.0.0-alpha.2",
+    "react-router-dom": "^6.0.0-alpha.2",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "reactfire": "^4.0.0-rc.2",
